--- a/example.html
+++ b/example.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle Clone</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wordle Clone</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Wordle Clone</h1>
-    <div id="game-board"></div>
-    <div id="keyboard">
-        <!-- Keyboard will be dynamically generated -->
-    </div>
-    <div id="message"></div>
+    <nav class="navbar">
+        <h1 class="left">Wordle</h1>
+    <ul class="right">
+         <li><a href="#">Hint</a></li> 
+        <li><a href="#">Leaderboard</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Profile</a></li>
+    </ul>
+  </nav>
+    <div>
 
-    <script src="script.js"></script>
+    </div>
+    <div class="container">
+    <div id="board"></div>
+    <div id="message"></div>
+  </div>
+   <!-- Virtual Keyboard -->
+    <div class="keyboard">
+      <div class="key-row">
+        <button class="key">Q</button>
+        <button class="key">W</button>
+        <button class="key">E</button>
+        <button class="key">R</button>
+        <button class="key">T</button>
+        <button class="key">Y</button>
+        <button class="key">U</button>
+        <button class="key">I</button>
+        <button class="key">O</button>W
+        <button class="key">P</button>
+      </div>
+      <div class="key-row">
+        <button class="key">A</button>
+        <button class="key">S</button>
+        <button class="key">D</button>
+        <button class="key">F</button>
+        <button class="key">G</button>
+        <button class="key">H</button>
+        <button class="key">J</button>
+        <button class="key">K</button>
+        <button class="key">L</button>
+      </div>
+      <div class="key-row">
+        <button class="key">Z</button>
+        <button class="key">X</button>
+        <button class="key">C</button>
+        <button class="key">V</button>
+        <button class="key">B</button>
+        <button class="key">N</button>
+        <button class="key">M</button>
+        <button class="key wide">Enter</button>
+        <button class="key wide">Backspace</button>
+      </div>
+    </div>
+  </div>
+
+  
+
+  <script src="script.js"></script>
 </body>
 </html>
