--- a/example.html
+++ b/example.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="heading flex">
+    <h1>dawwfaf</h1>
+  </div>
     <nav class="navbar">
         <h1 class="left">Wordle</h1>
     <ul class="right">
@@ -16,16 +19,17 @@
         <li><a href="#">Profile</a></li>
     </ul>
   </nav>
+  
     <div>
 
     </div>
-    <div class="container">
+    <div class="container flex">
     <div id="board"></div>
     <div id="message"></div>
   </div>
    <!-- Virtual Keyboard -->
-    <div class="keyboard">
-      <div class="key-row">
+    <div class="keyboard flex">
+      <div class="key-row flex">
         <button class="key">Q</button>
         <button class="key">W</button>
         <button class="key">E</button>
@@ -34,10 +38,10 @@
         <button class="key">Y</button>
         <button class="key">U</button>
         <button class="key">I</button>
-        <button class="key">O</button>W
+        <button class="key">O</button>
         <button class="key">P</button>
       </div>
-      <div class="key-row">
+      <div class="key-row flex">
         <button class="key">A</button>
         <button class="key">S</button>
         <button class="key">D</button>
@@ -48,7 +52,7 @@
         <button class="key">K</button>
         <button class="key">L</button>
       </div>
-      <div class="key-row">
+      <div class="key-row flex">
         <button class="key">Z</button>
         <button class="key">X</button>
         <button class="key">C</button>
