--- a/wordle.html
+++ b/wordle.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="heading flex">
-    <h1>dawwfaf</h1>
+    <h1></h1>
   </div>
     <nav class="navbar">
         <h1 class="left">Wordle</h1>
@@ -24,46 +24,53 @@
 
     </div>
     <div class="container flex">
-    <div id="board"></div>
+<div id="board"></div>
+  <div class="tile-container">
+  <!-- <div class="tile"> -->
+    <!-- <div class="front">A</div> -->
+    <!-- <div class="back">A</div> -->
+  <!-- </div> -->
+</div>
     <div id="message"></div>
   </div>
    <!-- Virtual Keyboard -->
-    <div class="keyboard flex">
-      <div class="key-row flex">
-        <button class="key">Q</button>
-        <button class="key">W</button>
-        <button class="key">E</button>
-        <button class="key">R</button>
-        <button class="key">T</button>
-        <button class="key">Y</button>
-        <button class="key">U</button>
-        <button class="key">I</button>
-        <button class="key">O</button>
-        <button class="key">P</button>
-      </div>
-      <div class="key-row flex">
-        <button class="key">A</button>
-        <button class="key">S</button>
-        <button class="key">D</button>
-        <button class="key">F</button>
-        <button class="key">G</button>
-        <button class="key">H</button>
-        <button class="key">J</button>
-        <button class="key">K</button>
-        <button class="key">L</button>
-      </div>
-      <div class="key-row flex">
-        <button class="key">Z</button>
-        <button class="key">X</button>
-        <button class="key">C</button>
-        <button class="key">V</button>
-        <button class="key">B</button>
-        <button class="key">N</button>
-        <button class="key">M</button>
-        <button class="key wide">Enter</button>
-        <button class="key wide">Backspace</button>
-      </div>
-    </div>
+   <div class="keyboard flex">
+  <div class="key-row flex">
+    <button class="key" data-letter="Q">Q</button>
+    <button class="key" data-letter="W">W</button>
+    <button class="key" data-letter="E">E</button>
+    <button class="key" data-letter="R">R</button>
+    <button class="key" data-letter="T">T</button>
+    <button class="key" data-letter="Y">Y</button>
+    <button class="key" data-letter="U">U</button>
+    <button class="key" data-letter="I">I</button>
+    <button class="key" data-letter="O">O</button>
+    <button class="key" data-letter="P">P</button>
+  </div>
+  <div class="key-row flex">
+    <button class="key" data-letter="A">A</button>
+    <button class="key" data-letter="S">S</button>
+    <button class="key" data-letter="D">D</button>
+    <button class="key" data-letter="F">F</button>
+    <button class="key" data-letter="G">G</button>
+    <button class="key" data-letter="H">H</button>
+    <button class="key" data-letter="J">J</button>
+    <button class="key" data-letter="K">K</button>
+    <button class="key" data-letter="L">L</button>
+  </div>
+  <div class="key-row flex">
+    <button class="key" data-letter="Z">Z</button>
+    <button class="key" data-letter="X">X</button>
+    <button class="key" data-letter="C">C</button>
+    <button class="key" data-letter="V">V</button>
+    <button class="key" data-letter="B">B</button>
+    <button class="key" data-letter="N">N</button>
+    <button class="key" data-letter="M">M</button>
+    <button class="key wide" data-letter="Enter">Enter</button>
+    <button class="key wide" data-letter="Backspace">Backspace</button>
+  </div>
+</div>
+
   </div>
 
   
